<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/background_4"
    tools:context=".PhysicalLayer">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="Physical Layer"
            android:textColor="@android:color/white"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardElevation="0dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.6"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:context=".HomePage">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="118dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/Title"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewIntroduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyIntro"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/phyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/PStringTitle"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/textViewIntroduction" />


                <TextView
                    android:id="@+id/textViewBody"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyBody"
                    card_view:layout_constraintTop_toBottomOf="@+id/phyTitle"
                    tools:layout_editor_absoluteX="0dp" />


                <TextView
                    android:id="@+id/phyTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyTitle2"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintTop_toBottomOf="@+id/textViewBody"
                    tools:layout_editor_absoluteX="0dp" />


                <TextView
                    android:id="@+id/textViewBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyBody2"
                    card_view:layout_constraintTop_toBottomOf="@+id/phyTitle2"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/phyTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyTitle3"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintTop_toBottomOf="@+id/textViewBody2"
                    tools:layout_editor_absoluteX="0dp" />


                <TextView
                    android:id="@+id/textViewBody3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/PhyBody3"
                    card_view:layout_constraintTop_toBottomOf="@+id/phyTitle3"
                    tools:layout_editor_absoluteX="0dp" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>