<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/background_4"
    tools:context=".ApplicationLayer">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Application Layer"
            android:textColor="@android:color/white"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="0dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.6"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:context=".HomePage">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="118dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:text="Introduction"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewIntroduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/AppIntro"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewIntroduction2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/AppIntro2"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/textViewIntroduction"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="350dp"
                    android:layout_height="315dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@+id/textViewIntroduction2"
                    app:srcCompat="@drawable/application_image"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.545"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/appTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Client Server Model"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/imageView" />


                <TextView
                    android:id="@+id/textViewBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/AppBody"
                    app:layout_constraintTop_toBottomOf="@+id/appTitle"
                    card_view:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="350dp"
                    android:layout_height="232dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBody"
                    app:srcCompat="@drawable/client_server"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="1.0"
                    card_view:layout_constraintStart_toStartOf="parent" />


                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2">

                </FrameLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>